Fix for copyright spacing

--- a/docs/_static/styles/components/_footer.scss
+++ b/docs/_static/styles/components/_footer.scss
@@ -78,11 +78,8 @@ footer.bd-footer {
         }
 
         &--copyright {
-            & > div {
+            & > p {
                 margin-top: 1rem;
-            }
-
-            p {
                 margin-bottom: 0;
             }
         }
